# Inter-Process-Communication-IPC-

AF_UNIX/: CMakeLists.txt  client.c  server.c
AF_UNIX/multiplexing/: CMakeLists.txt  server.c
Message Queue/: CMakeLists.txt  receiver.c  sender.c
Pipes/: 2ProcessPipes.c  CMakeLists.txt  Challenge.c  Pipes_demo.c
Shared Memory/: CMakeLists.txt  reader.c  shm_demo.c  writer.c
Signals/: CMakeLists.txt  ctrl_c.c  kill_receiver.c  kill_sender.c  raise.c
